// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`duty to refer utils dutyToReferStatusCard returns a NOT_ELIGIBLE duty to refer status card object 1`] = `
{
  "details": [],
  "heading": "Duty to Refer (DTR)",
  "inactive": true,
  "links": [
    {
      "href": "#",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "grey",
    "text": "Not eligible",
  },
}
`;

exports[`duty to refer utils dutyToReferStatusCard returns a NOT_STARTED duty to refer status card object 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Local authority (likely)",
      },
      "value": {
        "text": "Local Authority One",
      },
    },
  ],
  "heading": "Duty to Refer (DTR)",
  "inactive": false,
  "links": [
    {
      "href": "#",
      "text": "Add submission details",
    },
    {
      "href": "#",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "red",
    "text": "Not started",
  },
}
`;

exports[`duty to refer utils dutyToReferStatusCard returns a SUBMITTED duty to refer status card object 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Submitted to",
      },
      "value": {
        "text": "Local Authority One",
      },
    },
    {
      "key": {
        "text": "Reference",
      },
      "value": {
        "text": "Jane Doe",
      },
    },
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "1 December 2025 (9 days ago)",
      },
    },
  ],
  "heading": "Duty to Refer (DTR)",
  "inactive": false,
  "links": [
    {
      "href": "#",
      "text": "Add outcome",
    },
    {
      "href": "#",
      "text": "Notes",
    },
  ],
  "status": {
    "colour": "green",
    "text": "Submitted",
  },
}
`;

exports[`duty to refer utils dutyToReferStatusCard returns an empty duty to refer card for unknown status 1`] = `
{
  "details": [],
  "heading": "Duty to Refer (DTR)",
  "inactive": false,
  "links": [],
  "status": {
    "colour": "grey",
    "text": "Unknown",
  },
}
`;
